[tool.poetry]
name = "disney-test-api-taf"
version = "0.1.0"
description = "Disney REST API — Test Automation Framework"
authors = ["Rustam Zokirov <zokirovrustam202@gmail.com>"]
repository = "https://github.com/Rustam-Z/disney-test-api-taf"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2"
pytest-xdist = "^3.2"
pytest-rerunfailures = "^11.1"
PyYAML = "^6.0"
requests = "^2.28"
Faker = "^17.4"
jsonpath-ng = "^1.5"
munch = "^2.5"
pydantic = {extras = ["email"], version = "^1.10.7"}
pyjwt = "^2.6.0"
pytest-dependency = "^0.5"

[tool.pytest.ini_options]
minversion = "7.2"
xfail_strict=true
testpaths = ["tests"]
markers = ["smoke", "extended_path"]
addopts = "-s -v --ff"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
